--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Roque Alberto Pulido | CSE 121B | BYU-Idaho</title>
 </head>
 <body>
-    <h1>Hello World!!!</h1>
+    <h1>CSE 121B | BYU-Idaho</h1>
     <h2>Mérida, Yucatan, México</h2>
     <hr>
 </body>
